<resources>
    <string name="app_name">Coin Chaud</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="name">Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="euro">Dh</string>
    <string name="price">0.0</string>
    <string name="profile_details">Profile Details</string>
    <string name="user_name">Username</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="input_email">Input email</string>
    <string name="input_name">Input name</string>
    <string name="input_password">Input password</string>
    <string name="ingrendiets">Ingredients</string>
    <string name="details">Details</string>
    <string name="add_menu_item">Add Menu Item</string>
    <string name="add_new_dish">Add New Dish</string>
    <string name="add_new_person">Manage Users</string>
    <string name="upload">Upload</string>
    <string name="deleted">Deleted</string>
    <string name="edit">Edit</string>
    <string name="update">Update</string>
    <string name="user_role">User Role</string>
    <string name="waiter">Role</string>
    <string name="food">Food</string>
    <string name="_price_">Price</string>
    <string name="done">Done</string>
    <string name="Register">Register</string>
    <string name="menu">Menu</string>
    <string name="role">Role</string>
    <string name="required">All field required</string>
    <string name="logout">Logout</string>
    <string name="yes">Yes</string>
    <string name="disable">Your account has been blocked</string>
    <string name="choose_menu">Choose menu</string>
    <string name="no_internet">No internet connection</string>
    <string name="see_menu">See Menu</string>
    <string name="no">No</string>
    <string name="sign_in_frist">you have sign in first</string>
    <string name="Classification">Classification</string>
    <string name="vip">VIP</string>
    <string-array name="user_option">
        <item>Manger</item>
        <item>Waiter</item>
        <item>Disable</item>
    </string-array>
    <string-array name="menu_option_vip_normal">
        <item>Normal</item>
        <item>VIP</item>
    </string-array>

    <string-array name="price_option">
        <item>1</item>
        <item>3</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="normal">Normal</string>
    <string name="we_working_on_it">We working on it</string>

    <string name="crop_image_activity_title"></string>
    <string name="crop_image_menu_rotate_left">Rotate counter clockwise</string>
    <string name="crop_image_menu_rotate_right">Rotate</string>
    <string name="crop_image_menu_crop">Crop</string>
    <string name="crop_image_menu_flip">Flip</string>
    <string name="crop_image_menu_flip_horizontally">Flip horizontally</string>
    <string name="crop_image_menu_flip_vertically">Flip vertically</string>

    <string name="pick_image_intent_chooser_title">Select source</string>

    <string name="crop_image_activity_no_permissions">Cancelling, required permissions are not granted</string>
    <string name="small_price">small price *</string>
    <string name="medium_price">medium price optional</string>
    <string name="large_price">large price optional</string>
    <string name="no_money">no money</string>
    <string name="icon">Icon</string>
    <string name="background">Background</string>

</resources>