<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/off_white"
    tools:context=".AddPersonActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <androidx.cardview.widget.CardView
                android:id="@+id/cardView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:cardBackgroundColor="@color/green"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/image"
                        android:layout_width="0dp"
                        android:layout_height="300dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:src="@drawable/add_photo"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayout1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        app:layout_constraintEnd_toEndOf="@+id/image"
                        app:layout_constraintStart_toStartOf="@+id/image"
                        app:layout_constraintTop_toBottomOf="@+id/image">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/name"
                            android:textAllCaps="false"
                            android:textColor="@color/black"
                            android:textColorHint="@color/gray"
                            android:textSize="32sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayout2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        app:layout_constraintEnd_toEndOf="@+id/textInputLayout1"
                        app:layout_constraintStart_toStartOf="@+id/textInputLayout1"
                        app:layout_constraintTop_toBottomOf="@+id/textInputLayout1">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress"
                            android:textAllCaps="false"
                            android:textColor="@color/black"
                            android:textColorHint="@color/gray"
                            android:textSize="32sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayout3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        app:layout_constraintEnd_toEndOf="@+id/textInputLayout2"
                        app:layout_constraintStart_toStartOf="@+id/textInputLayout2"
                        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/password"
                            android:inputType="number"
                            android:textAllCaps="false"
                            android:textColor="@color/black"
                            android:textColorHint="@color/gray"
                            android:textSize="32sp" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.chivorn.smartmaterialspinner.SmartMaterialSpinner
                        android:id="@+id/spinner"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="@+id/textInputLayout3"
                        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
                        app:smsp_floatingLabelColor="@color/green"
                        app:smsp_floatingLabelText="@string/user_role"
                        app:smsp_hint="@string/role"
                        app:smsp_hintColor="@color/black"
                        app:smsp_itemColor="@color/black"
                        app:smsp_itemListColor="@color/white"
                        app:smsp_itemListHintBackgroundColor="#808080"
                        app:smsp_itemListHintColor="#FFFFFF"
                        app:smsp_multilineError="false"
                        app:smsp_selectedItemListColor="@color/green" />

                    <Button
                        android:id="@+id/register"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="8dp"
                        android:background="@drawable/bd_green"
                        android:text="@string/Register"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="28sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/spinner"
                        app:layout_constraintStart_toStartOf="@+id/spinner"
                        app:layout_constraintTop_toBottomOf="@+id/spinner" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/allPerson"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/all_person_item" />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>