<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNewDishActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <androidx.cardview.widget.CardView
                android:id="@+id/cardView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/green"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/image"
                        android:layout_width="0dp"
                        android:layout_height="300dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:src="@drawable/add_photo"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayout1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        app:layout_constraintEnd_toEndOf="@+id/image"
                        app:layout_constraintStart_toStartOf="@+id/image"
                        app:layout_constraintTop_toBottomOf="@+id/image">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/name"
                            android:textAllCaps="false"
                            android:textColor="@color/black"
                            android:textColorHint="@color/gray"
                            android:textSize="32sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayout3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        app:layout_constraintEnd_toEndOf="@+id/textInputLayout1"
                        app:layout_constraintStart_toStartOf="@+id/textInputLayout1"
                        app:layout_constraintTop_toBottomOf="@+id/textInputLayout1">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/details"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/details"
                            android:textAllCaps="false"
                            android:textColor="@color/black"
                            android:textColorHint="@color/gray"
                            android:textSize="32sp" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayout2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        app:layout_constraintEnd_toEndOf="@+id/textInputLayout22"
                        app:layout_constraintStart_toStartOf="@+id/textInputLayout22"
                        app:layout_constraintTop_toBottomOf="@+id/textInputLayout22">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/price_food_large"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/large_price"
                            android:inputType="numberDecimal"
                            android:textAllCaps="false"
                            android:textColor="@color/black"
                            android:textColorHint="@color/gray"
                            android:textSize="32sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayout22"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        app:layout_constraintEnd_toEndOf="@+id/textInputLayout222"
                        app:layout_constraintStart_toStartOf="@+id/textInputLayout222"
                        app:layout_constraintTop_toBottomOf="@+id/textInputLayout222">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/price_food_medium"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/medium_price"
                            android:inputType="numberDecimal"
                            android:textAllCaps="false"
                            android:textColor="@color/black"
                            android:textColorHint="@color/gray"
                            android:textSize="32sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayout222"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        app:layout_constraintEnd_toEndOf="@+id/textInputLayout3"
                        app:layout_constraintStart_toStartOf="@+id/textInputLayout3"
                        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/price_food_small"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/small_price"
                            android:inputType="numberDecimal"
                            android:textAllCaps="false"
                            android:textColor="@color/black"
                            android:textColorHint="@color/gray"
                            android:textSize="32sp" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.chivorn.smartmaterialspinner.SmartMaterialSpinner
                        android:id="@+id/spinnerMenu"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="@+id/textInputLayout2"
                        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
                        app:smsp_floatingLabelColor="@color/green"
                        app:smsp_floatingLabelText="@string/menu"
                        app:smsp_hint="@string/menu"
                        app:smsp_hintColor="@color/black"
                        app:smsp_itemColor="@color/black"
                        app:smsp_itemListColor="@color/white"
                        app:smsp_itemListHintBackgroundColor="#808080"
                        app:smsp_itemListHintColor="#FFFFFF"
                        app:smsp_multilineError="false"
                        app:smsp_selectedItemListColor="@color/green" />

                    <com.chivorn.smartmaterialspinner.SmartMaterialSpinner
                        android:id="@+id/spinnerClassification"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="@+id/spinnerMenu"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="@+id/spinnerMenu"
                        app:layout_constraintTop_toBottomOf="@+id/spinnerMenu"
                        app:smsp_floatingLabelColor="@color/green"
                        app:smsp_floatingLabelText="@string/Classification"
                        app:smsp_hint="@string/Classification"
                        app:smsp_hintColor="@color/black"
                        app:smsp_itemColor="@color/black"
                        app:smsp_itemListColor="@color/white"
                        app:smsp_itemListHintBackgroundColor="#808080"
                        app:smsp_itemListHintColor="#FFFFFF"
                        app:smsp_multilineError="false"
                        app:smsp_selectedItemListColor="@color/green" />

                    <Button
                        android:id="@+id/upload"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="8dp"
                        android:background="@drawable/bd_green"
                        android:text="@string/upload"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="28sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/spinnerClassification"
                        app:layout_constraintStart_toStartOf="@+id/spinnerClassification"
                        app:layout_constraintTop_toBottomOf="@+id/spinnerClassification" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/dishs"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/dish_item" />


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>