<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".FoodActivity">

   <androidx.core.widget.NestedScrollView
       android:layout_width="match_parent"
       android:layout_height="match_parent">
       <androidx.constraintlayout.widget.ConstraintLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent">
           <TextView
               android:id="@+id/name_food"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="16dp"
               android:text="@string/name"
               android:textAllCaps="false"
               android:textColor="@color/black"
               android:textSize="46sp"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toTopOf="parent" />

           <ImageView
               android:id="@+id/image_food"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:maxHeight="600dp"
               android:src="@drawable/img"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toBottomOf="@+id/name_food" />

           <LinearLayout
               android:id="@+id/linearLayout"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="16dp"
               android:background="@drawable/bd_green"
               android:orientation="horizontal"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toBottomOf="@+id/image_food">

               <ImageView
                   android:id="@+id/minimize"
                   android:layout_width="50dp"
                   android:layout_height="50dp"
                   android:layout_gravity="center"
                   android:layout_marginLeft="10dp"
                   android:layout_marginRight="10dp"
                   android:src="@drawable/minus" />

               <TextView
                   android:id="@+id/number"
                   android:layout_width="50dp"
                   android:layout_height="50dp"
                   android:layout_gravity="center"
                   android:layout_marginLeft="10dp"
                   android:layout_marginTop="5dp"
                   android:layout_marginRight="10dp"
                   android:layout_marginBottom="5dp"
                   android:background="@drawable/bg_white"
                   android:gravity="center"
                   android:text="2"
                   android:textAlignment="center"
                   android:textColor="@color/black"
                   android:textSize="32sp" />

               <ImageView
                   android:id="@+id/add"
                   android:layout_width="50dp"
                   android:layout_height="50dp"
                   android:layout_gravity="center"
                   android:layout_marginLeft="10dp"
                   android:layout_marginRight="10dp"
                   android:src="@drawable/add" />

           </LinearLayout>


           <TextView
               android:id="@+id/price_food"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginEnd="16dp"
               android:text="@string/price"
               android:textAlignment="center"
               android:textAllCaps="false"
               android:textColor="@color/black"
               android:textSize="32sp"
               app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
               app:layout_constraintEnd_toStartOf="@+id/linearLayout"
               app:layout_constraintTop_toTopOf="@+id/linearLayout" />

           <TextView
               android:id="@+id/euro_food"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/euro"
               android:textAllCaps="false"
               android:textColor="@color/black"
               android:textSize="18sp"
               app:layout_constraintBottom_toBottomOf="@+id/price_food"
               app:layout_constraintEnd_toStartOf="@+id/price_food"
               app:layout_constraintTop_toTopOf="@+id/price_food"
               app:layout_constraintVertical_bias="0.0" />


           <TextView
               android:id="@+id/textView3"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginStart="8dp"
               android:layout_marginTop="8dp"
               android:text="@string/ingrendiets"
               android:textColor="@color/black"
               android:textSize="32sp"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


           <androidx.recyclerview.widget.RecyclerView
               android:id="@+id/recyclerView_ingrendiets"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="8dp"
               android:orientation="horizontal"
               app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toBottomOf="@+id/textView3"
               tools:listitem="@layout/ingrendiets_item" />


           <TextView
               android:id="@+id/textView4"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginStart="8dp"
               android:layout_marginTop="8dp"
               android:text="@string/details"
               android:textColor="@color/black"
               android:textSize="32sp"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toBottomOf="@+id/recyclerView_ingrendiets" />


           <TextView
               android:id="@+id/details"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginStart="8dp"
               android:layout_marginTop="8dp"
               android:layout_marginEnd="8dp"
               android:text="@string/details"
               android:textColor="@color/black"
               android:textSize="32sp"
               app:layout_constraintBottom_toBottomOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toBottomOf="@+id/textView4" />


       </androidx.constraintlayout.widget.ConstraintLayout>
   </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>